[package]
name = "orx-criterion"
version = "1.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "Additional 'criterion' benchmarking utilities to enable parameter tuning for speed."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-criterion/"
keywords = ["criterion", "benchmark", "tuning"]
categories = ["development-tools::profiling"]

[dependencies]
cli-table = { version = "0.5.0" }
colorize = { version = "0.1.0" }
criterion = { version = "0.8.2" }
orx-priority-queue = { version = "1.8.0" }

[dev-dependencies]
orx-parallel = { version = "3.4.0" }
rayon = { version = "1.11.0" }
rand = "0.9.2"
rand_chacha = "0.9"

[[bench]]
name = "tuning_example"
harness = false
